message_feed: Fix muted banner visibility for empty feed.
Introduced has_muted_topics in user_topics to determine if all
topics in a stream are muted. Also added the muted_banner to
display when all topics are muted, providing clearer feedback
for empty feeds.

Fixes https://github.com/zulip/zulip/issues/31601

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -1321,7 +1321,7 @@ div.toggle_resolve_topic_spinner .loading_indicator_spinner {
 .empty-feed-notice-title {
     font-size: 1.5em;
     font-weight: 400;
-    line-height: 1;
+    line-height: 1.2;
     word-wrap: break-word;
 }
 
